correction bug depeches

--- a/mot.html
+++ b/mot.html
@@ -345,7 +345,7 @@
 			echo href_rezo("#URL_SITE",#ID_ARTICLE);
 			echo '><b>' . $para["titre"];
 			echo '</b> <span class="auteur">';
-			echo $para["auteur"]."&nbsp;".$para["date"];
+			echo "(".$para["auteur"]."&nbsp;".$para["date"].")";
 			echo '</span></a>';
 		</BOUCLE_aussi>
 	?>
