--- a/vieux.html
+++ b/vieux.html
@@ -8,7 +8,7 @@
 <META NAME="Coverage" content="Worldwide">
 <META NAME="language" content="fr">
 <META NAME="description" content="Le portail modeste et génial de l'Internet non commercial (sujets de société, médias, culture, multimédia, économie)">
-<TITLE>Bienvenue sur rezo.net</TITLE>
+<TITLE>Bienvenue sur Rezo.net</TITLE>
 <style>
 
 BODY    {   background: url(/PICSO/fond.gif) #186A6E; font-family: Helvetica, Arial, sans-serif; margin: 8px; margin-bottom: 20px;} 
