--- a/mot.html
+++ b/mot.html
@@ -324,23 +324,11 @@
 
                <div class="pavedepeches">
 
-<BOUCLE_test_l(MOTS){id_mot}{id_mot=623}>
-<B_labas>
-        <div class="pavedepeches" style="background: url(img_rezo/vert70.png);">
-        <div class="datesep">Des morts qui dérangent (Libération)</div>
-        <BOUCLE_labas(ARTICLES){ps>0}{doublons}{date<(#DATE|limite_age{-1})}{id_rubrique=211}{par date}{inverse}{0,30}>
-        <a class="depeches" <?php echo href_rezo("#URL_SITE",#ID_ARTICLE); ?>><b>[(#TITRE|supprimer_numero|texte_script)]</b> <span class="auteur">(<?php echo preg_replace(",200[0-9]-([0-9]{2})-([0-9]{2}).*,", "\\2/\\1", "#DATE"); ?>)</span></a>
-        </BOUCLE_labas>
-        </div>
-	<div>&nbsp;</div>
-</B_labas>
-</BOUCLE_test_l>
-
 <div class="datesep">Dépêches...</div>
 	<?php
-		<BOUCLE_aussi(ARTICLES){doublons}{ps>=2}{id_mot}{id_rubrique!=211}{par date}{inverse}{0,10}>
+		<BOUCLE_aussi(ARTICLES){doublons}{ps>=2}{id_mot}{par date}{inverse}{0,10}>
 			$addsource['#ID_RUBRIQUE']++;
-			$para=retitrage('[(#TITRE|supprimer_numero|texte_script)]', 'tout', 'depeche', '[(#DATE)]', $titre_rub);
+			$para=retitrage('[(#TITRE|supprimer_numero|texte_script)]', 'tout', 'depeche', '[(#DATE)]', $rubs['#ID_RUBRIQUE']['titre']);
 			echo '<a class="depeches"';
 			echo href_rezo("#URL_SITE",#ID_ARTICLE);
 			echo '><b>' . $para["titre"];
@@ -357,6 +345,7 @@
 
 <div class="datesep">Et aussi...</div><?php
 <BOUCLE_aussi2(ARTICLES){doublons}{ps>=2}{id_mot}{par date}{inverse}{0,70}>
+	$addsource['#ID_RUBRIQUE']++;
 	$para=retitrage('[(#TITRE|supprimer_numero|texte_script)]', 'tout', 'depeche', '[(#DATE)]', $rubs['#ID_RUBRIQUE']['titre']);
 	echo '<a class="depeches"';
 	echo href_rezo("#URL_SITE",#ID_ARTICLE);
