--- a/mot.html
+++ b/mot.html
@@ -24,6 +24,7 @@
 	<link rel="SHORTCUT ICON" href="/img/favicon.ico" />
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<meta name="ROBOTS" content="INDEX,FOLLOW,NOARCHIVE">
+	<META name="keywords" lang="fr" content="[(#TEXTE|texte_script|enleve_bayesiens)]">
 	<link rel="stylesheet" href="/spip_style.css" type="text/css" />
 
 	<style>
