--- a/sommaire800.html
+++ b/sommaire800.html
@@ -1,4 +1,6 @@
 <?php
+  $TAILLEG=25;
+  $TAILLED=22;
   if (strpos($HTTP_HOST,"ews")) { header("Location: /actu"); exit(1); }
   if (($preference=="1024")&&(!strpos($REQUEST_URI,"800"))) { header("Location: /large"); exit(1); }
   //if (!strpos($REQUEST_URI,"ezo800")) { header("Location: /anniv"); exit(1); }
@@ -218,7 +220,7 @@
 
 		// nourrir les blocs date et source et leurs criteres de tri
 
-		if (($NB[$art["secteur"]]++<=20)&&($NBTOT++<=25)) {
+		if (($NB[$art["secteur"]]++<=20)&&($NBTOT++<=$TAILLEG)) {
 		  if ($var_source) {
 		  	$bloc[$id_rub][] = $art;
 			$bloc_valeur[$id_rub] = max($bloc_valeur[$id_rub],$datenum);
@@ -289,7 +291,7 @@
 		<BOUCLE_depeches(ARTICLES){lang=fr}{ps>=2}{id_rubrique!=79}{date<(#ENV{date}|limite_age{-1})}{date>=(#ENV{date}|limite_age{10})}{par date}{inverse}{0,60}>
 			<BOUCLE_rub_parent3(RUBRIQUES){id_rubrique}><?php [$source='(#DESCRIPTIF)';] $titre_rub='[(#TITRE|texte_script)]'; ?></BOUCLE_rub_parent3>
 	        <?php 
-			if ((!$deja['#ID_ARTICLE'])&&($cpt++<=25)) { 
+			if ((!$deja['#ID_ARTICLE'])&&($cpt++<=$TAILLED)) { 
 			  $para=retitrage('[(#TITRE|supprimer_numero|texte_script)]', 'tout', 'depeche', '[(#DATE)]', $titre_rub);
 			   echo "<a href='sources/$source'><img src='img_rezo/plus2.gif' title='$titre_rub' border='0' align='right' style='margin-top: 4px; margin-left: 5px;'></a>";
 			$mots = '<BOUCLE_mots_depeches(MOTS){id_groupe!=2}{id_article}{", "}>[(#TITRE|texte_script)]</BOUCLE_mots_depeches>';
