--- a/vieux.html
+++ b/vieux.html
@@ -141,8 +141,8 @@ A.titreZine  {   color: #ff6300 !important; font-weight: bold;}
 <TD VALIGN=TOP ROWSPAN=2>
 
 <div id="cinqAns">
-<h1>IL A CINQ ANS, LE REZO.NET !!</h1>
-<p>L'occasion de le revoir tel qu'il était à l'origine, en novembre 99, mais aussi de revisiter ses différentes versions et de signer <a href="http://rezo.net/livredor">le livre d'or</a>.
+<h1>D&Eacute;J&Agrave; SEPT ANS, LE REZO.NET !</h1>
+<p>L'occasion de le revoir tel qu'il était à l'origine, en novembre 99, mais aussi de revisiter ses différentes versions et de <a href="http://rezo.net/livredor"><U>signer le livre d'or</U></a>.
 </p>
 
 <div id="lesLiens">
